--- a/src/NerdStore.WebApp.MVC/Views/Vitrine/ProdutoDetalhe.cshtml
+++ b/src/NerdStore.WebApp.MVC/Views/Vitrine/ProdutoDetalhe.cshtml
@@ -143,6 +143,9 @@
     }
 </style>
 <div class="container">
+
+    <vc:summary />
+    
     <div class="row">
         <div class="col-xs-4 item-photo">
 
