--- a/src/NerdStore.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
+++ b/src/NerdStore.WebApp.MVC/Views/Shared/_LoginPartial.cshtml
@@ -23,4 +23,7 @@ else
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
+<li>
+    <a class="nav-link text-dark" asp-controller="Carrinho" asp-action="Index"><vc:vc:cart/></a>
+</li>
 </ul>
